infra/K8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: resume-builder
  labels:
    app: resume-builder
